# search-support-robots

./: .gitignore  .gitmodules  README.md  requirements.txt
.github/: CODEOWNERS
planning-pkg-backup/behavior-tree/: CMakeLists.txt  README.md  package.xml
planning-pkg-backup/behavior-tree/behavior_trees/: SearchAndSupport.btproj  search_and_support.xml
planning-pkg-backup/behavior-tree/src/: approach_person.cpp  check_system.cpp  deliver_payload.cpp  detect_person.cpp  navigate_to_waypoint.cpp  replan_search_area.cpp  report_to_base.cpp  run_tree.cpp  say_something.cpp  search_and_support_nodes.cpp  test_rclcpp_node.cpp
planning-pkg-backup/config/: nav2_params.yaml
planning-pkg-backup/install/: local_setup.sh  setup.sh
planning-pkg-backup/install/behavior-tree/lib/behavior-tree/: run_tree  test_rclcpp_node
planning-pkg-backup/install/behavior-tree/share/ament_index/resource_index/package_run_dependencies/: behavior-tree
planning-pkg-backup/install/behavior-tree/share/ament_index/resource_index/parent_prefix_path/: behavior-tree
planning-pkg-backup/install/behavior-tree/share/behavior-tree/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
planning-pkg-backup/install/behavior-tree/share/behavior-tree/behavior_trees/: search_and_support.xml  simple_tree.xml
planning-pkg-backup/install/behavior-tree/share/behavior-tree/cmake/: behavior-treeConfig-version.cmake  behavior-treeConfig.cmake
planning-pkg-backup/install/behavior-tree/share/behavior-tree/environment/: ament_prefix_path.dsv  path.dsv
planning-pkg-backup/install/behaviortree_cpp/share/behaviortree_cpp/: local_setup.sh  package.sh
planning-pkg-backup/install/behaviortree_cpp/share/behaviortree_cpp/cmake/: behaviortree_cppConfig-version.cmake  behaviortree_cppConfig.cmake  behaviortree_cppTargetsExport-release.cmake  behaviortree_cppTargetsExport.cmake
utils/: mic_array.py
utils/lidar/: README.md
utils/mic_array/: tuning.py
