<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behavior-tree</name>
  <version>0.0.1</version>
  <description>Behavior Tree runner for Search and Support robot project.</description>

  <maintainer email="20lapg1@queensu.ca">Luke Parna-Gile</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>ament_index_cpp</depend>

  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
